--- a/src/main/resources/com/si/colorpalettefx/color-palette-view.fxml
+++ b/src/main/resources/com/si/colorpalettefx/color-palette-view.fxml
@@ -26,6 +26,7 @@
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#onSavePalettesMenuItemClick" text="Save Palettes..." />
                   <MenuItem mnemonicParsing="false" onAction="#onLoadPalettesMenuItemClick" text="Load Palettes..." />
+                  <MenuItem mnemonicParsing="false" onAction="#onLoadLegacyPalettesMenuItemClick" text="Load Legacy Palette..." />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#onQuitMenuItemClick" text="Quit" />
                </items>
